Fix body overflow issues and add github link
Link is in nav

--- a/components/index/Sketch.module.css
+++ b/components/index/Sketch.module.css
@@ -2,5 +2,4 @@
 	padding: 2rem 0;
 	display: flex;
 	justify-content: center;
-	min-height: 90vmin;
 }
